--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,11 @@ version: 0.1.0
 authors:
   - Chris Larsen <clarsendev@protonmail.com>
 
+development_dependencies:
+  minitest:
+    github: ysbaddaden/minitest.cr
+    version: "1.0.1"
+
 crystal: 1.0.0
 
 license: MIT
