--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,8 @@ development_dependencies:
   minitest:
     github: ysbaddaden/minitest.cr
     version: "1.0.1"
+  timecop:
+    github: crystal-community/timecop.cr
 
 crystal: 1.0.0
 
